# parachain

./: .gitignore  Cargo.lock.bak  Cargo.toml  Dockerfile  KUSAMA.md  README.md  about.toml  integritee-rococo-genesis-state  integritee-rococo-genesis.state  integritee-rococo-raw.json  integritee-rococo.json  intgeritee-rococo-genesis.wasm  paseo.local.raw.json  rust-toolchain.toml
.github/: env
chopsticks/: integritee-kusama.yml  integritee-polkadot.yml
integration-tests/emulated/chains/parachains/integritee/integritee-kusama/: Cargo.toml
integration-tests/emulated/chains/parachains/integritee/integritee-kusama/src/: genesis.rs  lib.rs
integration-tests/emulated/chains/parachains/integritee/integritee-polkadot/: Cargo.toml
integration-tests/emulated/chains/parachains/integritee/integritee-polkadot/src/: genesis.rs  lib.rs
integration-tests/emulated/networks/kusama-polkadot-system/: Cargo.toml
integration-tests/emulated/networks/kusama-polkadot-system/src/: lib.rs
integration-tests/emulated/tests/bridges/ik-to-ip/: Cargo.toml
integration-tests/emulated/tests/bridges/ik-to-ip/src/: lib.rs
integration-tests/emulated/tests/bridges/ik-to-ip/src/tests/: ik_to_ip_xcm.rs  integritee_bridge_setup.rs  ip_to_ik_xcm.rs  mod.rs
parachains/: Cargo.toml
polkadot-launch/: launch-kusama-local-with-shell.json  launch-kusama-local.json  launch-rococo-local-with-integritee-wo-xcm.json  launch-rococo-local-with-integritee-xcm.json  launch-rococo-local-with-integritee.json  launch-rococo-local-with-shell-rococo-1.4.12.json  launch-rococo-local-with-shell.json  launch-rococo-local.json  launch-westend-local-with-shell.json  launch-westend-local.json
polkadot-parachains/: Cargo.toml
polkadot-parachains/chain-specs/: integritee-kusama.json  integritee-paseo.json  integritee-polkadot.json  integritee-rococo.json  shell-kusama-lease2.json
polkadot-parachains/common/: Cargo.toml
polkadot-parachains/common/src/: fee.rs  lib.rs  porteer.rs  xcm_config.rs  xcm_helpers.rs
polkadot-parachains/integritee-kusama/: Cargo.toml
polkadot-parachains/integritee-kusama/src/: lib.rs  migrations.rs  porteer.rs  xcm_config.rs
polkadot-parachains/integritee-kusama/src/tests/: mod.rs  porteer.rs
polkadot-parachains/integritee-kusama/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_asset_conversion.rs  pallet_asset_registry.rs  pallet_assets.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_claims.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_democracy.rs  pallet_enclave_bridge.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sidechain.rs  pallet_teeracle.rs  pallet_teerdays.rs  pallet_teerex.rs  pallet_timestamp.rs  pallet_utility.rs  pallet_vesting.rs  pallet_xcm.rs
polkadot-parachains/integritee-kusama/src/weights/xcm/: mod.rs  pallet_xcm_benchmarks_fungible.rs
polkadot-parachains/integritee-polkadot/: Cargo.toml  build.rs
polkadot-parachains/integritee-polkadot/src/: helpers.rs  lib.rs  migrations.rs  porteer.rs  tests.rs  xcm_config.rs
polkadot-parachains/integritee-polkadot/src/tests/: mod.rs  porteer.rs
polkadot-parachains/integritee-polkadot/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  frame_system_extensions.rs  mod.rs  pallet_asset_conversion.rs  pallet_asset_registry.rs  pallet_assets.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_claims.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_democracy.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sidechain.rs  pallet_teeracle.rs  pallet_teerdays.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  pallet_xcm.rs
polkadot-parachains/integritee-polkadot/src/weights/xcm/: mod.rs  pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
polkadot-parachains/integritee-runtime/: Cargo.toml  build.rs
polkadot-parachains/integritee-runtime/src/: lib.rs  migrations.rs  migrations_fix.rs  xcm_config.rs
polkadot-parachains/integritee-runtime/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  orml_tokens.rs  pallet_asset_conversion.rs  pallet_asset_registry.rs  pallet_assets.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_claims.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_enclave_bridge.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sidechain.rs  pallet_teeracle.rs  pallet_teerdays.rs  pallet_teerex.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  pallet_xcm.rs
polkadot-parachains/integritee-runtime/src/weights/xcm/: mod.rs
polkadot-parachains/pallets/ping/: Cargo.toml
polkadot-parachains/parachains-common/: Cargo.toml
polkadot-parachains/res/: integritee-kusama.json  integritee-moonbase.json  integritee-rococo.json  integritee-westend.json  shell-kusama.json
polkadot-parachains/shell-runtime/: Cargo.toml  build.rs
polkadot-parachains/shell-runtime/src/: lib.rs  xcm_config.rs
polkadot-parachains/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  service_shell.rs
polkadot-parachains/tests/: purge_chain_works.rs
rococo-parachains/: Cargo.toml
scripts/: benchmark.sh  benchmark_all_pallets.sh  benchmark_teerex_full_info.sh  dump-essential-balances.sh  dump_wasm_and_state_for_all_chains.sh  dump_wasm_state_and_spec.sh  frame-weight-template.hbs  generate_genesis_value.sh  hrmp-helper.sh  update_hardcoded_specs.py
zombienet/: kusama-local-with-shell.toml  kusama-local.toml  launch-rococo-local-with-integritee-xcm.toml  launch-rococo-local-with-integritee.toml  rococo-local.toml  (+8 more)
(+80 files in other folders)
