[workspace]
resolver = "2"
members = [
    "polkadot-parachains",
    "polkadot-parachains/common",
    "polkadot-parachains/integritee-kusama",
    "polkadot-parachains/integritee-polkadot",
]

[profile.release]
panic = "unwind"

[workspace.dependencies]
async-trait = "0.1.73"
clap = { version = "4.5.1", features = ["derive"] }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
color-print = "0.3.4"
futures = "0.3.28"
hex-literal = "0.4.1"
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11.0"
# num-traits feature needed for dex integer sq root:
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "num-traits", "scale-info"] }

# integritee pallets
pallet-asset-registry = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-claims = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-enclave-bridge = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-sidechain = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-teeracle = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-teerdays = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-teerex = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
pallet-xcm-transactor = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
xcm-primitives = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }
xcm-transactor-primitives = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-202409-3" }

# Polkadot-sdk and ecosystem crates [no_std]
assets-common = { version = "0.18.3", default-features = false }
cumulus-pallet-aura-ext = { version = "0.17.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.17.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.17.1", default-features = false }
cumulus-pallet-session-benchmarking = { version = "19.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.17.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.17.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
cumulus-primitives-core = { version = "0.16.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.16.0", default-features = false }
cumulus-primitives-utility = { version = "0.17.0", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
orml-traits = { version = "1.2.1", default-features = false }
orml-xcm = { version = "1.2.1", default-features = false }
orml-xcm-support = { version = "1.2.1", default-features = false }
orml-xtokens = { version = "1.2.1", default-features = false }
pallet-asset-conversion = { version = "20.0.0", default-features = false }
pallet-assets = { version = "40.0.0", default-features = false }
pallet-aura = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-bounties = { version = "37.0.0", default-features = false }
pallet-child-bounties = { version = "37.0.0", default-features = false }
pallet-collator-selection = { version = "19.0.0", default-features = false }
pallet-collective = { version = "38.0.0", default-features = false }
pallet-democracy = { version = "38.0.0", default-features = false }
pallet-message-queue = { version = "41.0.2", default-features = false }
pallet-multisig = { version = "38.0.0", default-features = false }
pallet-preimage = { version = "38.0.0", default-features = false }
pallet-proxy = { version = "38.0.0", default-features = false }
pallet-session = { version = "38.0.0", default-features = false }
pallet-scheduler = { version = "39.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.2", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
pallet-treasury = { version = "37.0.0", default-features = false }
pallet-utility = { version = "38.0.0", default-features = false }
pallet-vesting = { version = "38.0.0", default-features = false }
pallet-xcm = { version = "17.0.1", default-features = false }
parachains-common = { version = "18.0.0", default-features = false }
staging-parachain-info = { version = "0.17.0", default-features = false }
polkadot-core-primitives = { version = "15.0.0", default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-runtime-common = { version = "17.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
staging-xcm = { version = "14.2.0", default-features = false }
staging-xcm-builder = { version = "17.0.3", default-features = false }
staging-xcm-executor = { version = "17.0.0", default-features = false }

# std stuff
cumulus-client-cli = "0.18.0"
cumulus-client-collator = "0.18.0"
cumulus-client-consensus-aura = "0.18.0"
cumulus-client-consensus-common = "0.18.0"
cumulus-client-consensus-proposer = "0.16.0"
cumulus-client-network = "0.18.0"
cumulus-client-service = "0.19.0"
cumulus-primitives-parachain-inherent = "0.16.0"
cumulus-relay-chain-inprocess-interface = "0.19.0"
cumulus-relay-chain-interface = "0.18.0"
cumulus-relay-chain-minimal-node = "0.19.0"
cumulus-relay-chain-rpc-interface = "0.18.0"
frame-benchmarking-cli = "43.0.0"
substrate-frame-rpc-system = "39.0.0"
jsonrpsee = { version = "0.24.8", features = ["server"] }
pallet-transaction-payment-rpc = "41.0.0"
polkadot-cli = "19.0.0"
polkadot-service = "19.0.0"
sc-basic-authorship = "0.45.0"
sc-chain-spec = "38.0.0"
sc-cli = "0.47.0"
sc-client-api = "37.0.0"
sc-consensus = "0.44.0"
sc-consensus-grandpa = "0.30.0"
sc-executor = "0.40.1"
sc-network = "0.45.3"
sc-network-common = "0.44.0"
sc-network-sync = "0.44.1"
sc-offchain = "40.0.0"
sc-rpc = "40.0.0"
sc-service = "0.46.0"
sc-sysinfo = "38.0.0"
sc-telemetry = "25.0.0"
sc-tracing = "37.0.1"
sc-transaction-pool = "37.0.0"
sc-transaction-pool-api = "37.0.0"
sp-blockchain = "37.0.1"
sp-consensus = "0.40.0"
sp-keyring = "39.0.0"
sp-keystore = "0.40.0"
sp-timestamp = "34.0.0"
substrate-prometheus-endpoint = "0.17.0"

# Temporary pin only
# See https://github.com/bluejekyll/trust-dns/issues/1946 for more details.
enum-as-inner = "=0.5.1"

# dev dependencies
assert_cmd = "2.0"
nix = "0.25"
tempfile = "3.3.0"
tokio = { version = "1.33.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"
hex = "0.4.3"
polkadot-runtime-parachains = "17.0.1"

# build dependencies
substrate-build-script-utils = "11.0.0"
substrate-wasm-builder = "24.0.1"

#[patch."https://github.com/integritee-network/pallets.git"]
#claims-primitives = { path = '../pallets/primitives/claims' }
#common-primitives = { path = '../pallets/primitives/common' }
#enclave-bridge-primitives = { path = '../pallets/primitives/enclave-bridge' }
#pallet-asset-registry = { path = '../pallets/asset-registry' }
#pallet-claims = { path = '../pallets/claims' }
#pallet-enclave-bridge = { path = '../pallets/enclave-bridge' }
#pallet-sidechain = { path = '../pallets/sidechain' }
#pallet-teeracle = { path = '../pallets/teeracle' }
#pallet-teerdays = { path = '../pallets/teerdays' }
#pallet-teerex = { path = '../pallets/teerex' }
#pallet-xcm-transactor = { path = '../pallets/xcm-transactor' }
#sgx-verify = { path = '../pallets/teerex/sgx-verify' }
#teeracle-primitives = { path = '../pallets/primitives/teeracle' }
#teerdays-primitives = { path = '../pallets/primitives/teerdays' }
#teerex-primitives = { path = '../pallets/primitives/teerex' }
#test-utils = { path = '../pallets/test-utils' }
#xcm-primitives = { path = '../pallets/primitives/xcm' }
#xcm-transactor-primitives = { path = '../pallets/primitives/xcm-transactor' }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
