[workspace.package]
edition = "2021"
authors = ["Integritee AG <hello@integritee.network>"]

[workspace]
resolver = "2"

members = [
    "integration-tests/emulated/chains/parachains/integritee/integritee-kusama",
    "integration-tests/emulated/chains/parachains/integritee/integritee-polkadot",
    "integration-tests/emulated/networks/kusama-polkadot-system",
    "integration-tests/emulated/tests/bridges/ik-ip",
    "polkadot-parachains",
    "polkadot-parachains/common",
    "polkadot-parachains/integritee-kusama",
    "polkadot-parachains/integritee-polkadot",
]

[profile.release]
panic = "unwind"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
docify = { version = "0.2.9" }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
color-print = "0.3.4"
futures = "0.3.28"
hex-literal = "0.4.1"
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11.0"
# num-traits feature needed for dex integer sq root:
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "num-traits", "scale-info"] }

# integritee pallets
pallet-asset-registry = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-claims = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-enclave-bridge = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-porteer = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-sidechain = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teeracle = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teerdays = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
pallet-teerex = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }
xcm-primitives = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-stable2503-6" }

# Polkadot-sdk and ecosystem crates [no_std]
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
assets-common = { version = "0.21.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
pallet-xcm-benchmarks = { version = "20.0.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-timestamp = { version = "0.19.0", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
frame-benchmarking = { version = "40.2.0", default-features = false }
frame-executive = { version = "40.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
orml-traits = { version = "1.4.0", default-features = false }
orml-xcm = { version = "1.4.0", default-features = false }
orml-xcm-support = { version = "1.4.0", default-features = false }
orml-xtokens = { version = "1.4.0", default-features = false }
pallet-asset-conversion = { version = "22.0.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-bounties = { version = "39.0.0", default-features = false }
pallet-child-bounties = { version = "39.0.0", default-features = false }
pallet-collator-selection = { version = "21.0.0", default-features = false }
pallet-collective = { version = "40.1.0", default-features = false }
pallet-democracy = { version = "40.1.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-scheduler = { version = "41.2.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-treasury = { version = "39.0.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-vesting = { version = "40.1.0", default-features = false }
pallet-xcm = { version = "19.1.2", default-features = false }
parachains-common = { version = "21.0.0", default-features = false }
staging-parachain-info = { version = "0.20.0", default-features = false }
polkadot-core-primitives = { version = "17.1.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-primitives = { version = "18.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-tracing = { version = "17.1.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
xcm = { version = "16.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "20.1.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "19.1.2", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { version = "0.7.1", default-features = false }

# std stuff
cumulus-client-cli = "0.22.0"
cumulus-client-collator = "0.22.0"
cumulus-client-consensus-aura = "0.22.1"
cumulus-client-consensus-common = "0.22.0"
cumulus-client-consensus-proposer = "0.19.0"
cumulus-client-service = "0.23.0"
cumulus-primitives-parachain-inherent = "0.18.1"
cumulus-relay-chain-interface = "0.22.0"
frame-benchmarking-cli = "47.2.0"
substrate-frame-rpc-system = "43.0.0"
jsonrpsee = { version = "0.24.8", features = ["server"] }
pallet-transaction-payment-rpc = "43.0.0"
polkadot-cli = "23.0.0"
polkadot-service = "23.1.0"
sc-basic-authorship = "0.49.0"
sc-chain-spec = "42.0.0"
sc-cli = "0.51.1"
sc-client-api = "39.0.0"
sc-consensus = "0.48.0"
sc-executor = "0.42.0"
sc-network = "0.49.2"
sc-offchain = "44.0.1"
sc-service = "0.50.0"
sc-sysinfo = "42.0.0"
sc-telemetry = "28.1.0"
sc-tracing = "39.0.0"
sc-transaction-pool = "39.0.0"
sc-transaction-pool-api = "39.0.0"
sp-blockchain = "39.0.0"
sp-consensus = "0.42.0"
sp-keyring = "41.0.0"
sp-keystore = "0.42.0"
sp-timestamp = "36.0.0"

# Temporary pin only
# See https://github.com/bluejekyll/trust-dns/issues/1946 for more details.
enum-as-inner = "=0.5.1"

# dev dependencies
assert_cmd = "2.0"
nix = "0.25"
tempfile = "3.3.0"
hex = "0.4.3"
polkadot-runtime-parachains = "19.1.0"

# build dependencies
substrate-build-script-utils = "11.0.0"
substrate-wasm-builder = "26.0.1"

# runtimes repository (mainly used for integration tests)
bp-messages = { version = "0.20.1", default-features = false }
pallet-bridge-messages = { version = "0.20.1", default-features = false }

emulated-integration-tests-common = { version = "20.1.0" }
bp-bridge-hub-kusama = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
bridge-hub-kusama-runtime = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
integration-tests-helpers = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
asset-hub-kusama-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
asset-hub-polkadot-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
bridge-hub-kusama-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
bridge-hub-polkadot-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
kusama-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
polkadot-emulated-chain = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }
system-parachains-constants = { git = "https://github.com/encointer/runtimes", branch = "ab/trusted-aliaser-patch" }

# Snowbridge
snowbridge-beacon-primitives = { version = "0.13.1" }
snowbridge-core = { version = "0.13.2" }
snowbridge-inbound-queue-primitives = { version = "0.2.2" }
snowbridge-pallet-system = { version = "0.13.3" }
snowbridge-pallet-outbound-queue = { version = "0.13.0" }
snowbridge-pallet-inbound-queue-fixtures = { version = "0.21.0" }

# local
integritee-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/integritee/integritee-kusama", default-features = false }
integritee-kusama-runtime = { path = "polkadot-parachains/integritee-kusama", default-features = false }
integritee-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/integritee/integritee-polkadot", default-features = false }
integritee-polkadot-runtime = { path = "polkadot-parachains/integritee-polkadot", default-features = false }
kusama-polkadot-system-emulated-network = { path = "integration-tests/emulated/networks/kusama-polkadot-system", default-features = false }

#[patch."https://github.com/integritee-network/pallets.git"]
#claims-primitives = { path = '../pallets/primitives/claims' }
#common-primitives = { path = '../pallets/primitives/common' }
#enclave-bridge-primitives = { path = '../pallets/primitives/enclave-bridge' }
#pallet-asset-registry = { path = '../pallets/asset-registry' }
#pallet-claims = { path = '../pallets/claims' }
#pallet-enclave-bridge = { path = '../pallets/enclave-bridge' }
#pallet-porteer = { path = '../pallets/porteer' }
#pallet-sidechain = { path = '../pallets/sidechain' }
#pallet-teeracle = { path = '../pallets/teeracle' }
#pallet-teerdays = { path = '../pallets/teerdays' }
#pallet-teerex = { path = '../pallets/teerex' }
#sgx-verify = { path = '../pallets/teerex/sgx-verify' }
#teeracle-primitives = { path = '../pallets/primitives/teeracle' }
#teerdays-primitives = { path = '../pallets/primitives/teerdays' }
#teerex-primitives = { path = '../pallets/primitives/teerex' }
#test-utils = { path = '../pallets/test-utils' }
#xcm-primitives = { path = '../pallets/primitives/xcm' }

[patch.crates-io]
ring = { git = "https://github.com/integritee-network/ring-xous", branch = "0.16.20-hack1.84.1" }
